# smithworks-frontend

./: README.md  manage.py  pyproject.toml
account/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py
smithworks/: apps.py  forms.py  models.py  tasks.py  urls.py  views.py
smithworks/generators/: adjectives.py  animals.py  classes.py  colors.py  monsters.py  utils.py
smithworks/migrations/: 0001_initial.py  0002_auto_20200412_2353.py  0003_auto_20200414_0432.py
smithworks_frontend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
theme/static/css/: styles.min.css
theme/templates/: base.html  dashboard.html  homepage.html  login.html  profile.html  register.html  signin.html
