[tool.poetry]
name = "smithworks-frontend"
version = "0.1.0"
description = "Web frontend for the smithworks-cli"
authors = ["smithworks-cli"]

[tool.poetry.dependencies]
python = "~3.8"
django = "~3.0.5"
django-tailwind = "~0.7.1"
django-phone-field = "~1.8.0"
python-digitalocean = "^1.15.0"
uuid = "^1.30"

[tool.poetry.dev-dependencies]
black = "~19.10b0"
django-debug-toolbar = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
